[package]
name = "exec-command"
version = "0.1.0"
edition = "2021"

[dependencies]
shell-words = "1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_System_Threading",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
